--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "formik": "^2.2.9",
     "formik-mui": "^4.0.0-alpha.3",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "8.4.1",
